removed outline from cart icon and added link to it

--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -45,7 +45,7 @@
         </button>
       </span>
 
-      <div class="pointer cart-icon-wrapper">
+      <div class="pointer cart-icon-wrapper" [routerLink]="'cart'">
         <mat-icon><fa-icon icon="shopping-cart"></fa-icon></mat-icon>
       </div>
     </mat-toolbar>
