--- a/src/app/features/login/login/login.component.html
+++ b/src/app/features/login/login/login.component.html
@@ -1,1 +1,3 @@
-<p>login works!</p>
+<button (click)="login()" [routerLink]="['/products']">Login</button>
+<hr />
+<a [routerLink]="[ '/register' ]">Register</a>
