--- a/src/app/features/register/register/register.component.html
+++ b/src/app/features/register/register/register.component.html
@@ -1,1 +1,3 @@
-<p>register works!</p>
+<button (click)="login()" [routerLink]="['/products']">Register</button>
+<hr />
+<a [routerLink]="[ '/login' ]">Login</a>
