--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -76,6 +76,8 @@
         </div>
       </div>
     </mat-toolbar>
-    <router-outlet #o="outlet"></router-outlet>
+    <div class="container">
+      <router-outlet #o="outlet"></router-outlet>
+    </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
