--- a/src/app/features/products/product/product.component.html
+++ b/src/app/features/products/product/product.component.html
@@ -1,1 +1,82 @@
-<p>product works!</p>
+<main *ngIf="product$ | async as product">
+  <mat-card
+    class="product-card"
+    fxLayout="column"
+    fxLayoutAlign="space-between"
+  >
+    <mat-card-header>
+      <mat-card-title>{{ product.name }}</mat-card-title>
+      <mat-card-subtitle>{{ product.price | currency }}</mat-card-subtitle>
+    </mat-card-header>
+    <img
+      mat-card-image
+      [src]="'./../../assets/images/' + product.image"
+      alt="Photo of {{ product.name }}"
+    />
+    <mat-card-content fxLayout="column" fxLayoutAlign="space-between">
+      <p>{{ product.description }}</p>
+
+      <form [formGroup]="productFormGroup" action="#" fxLayout="column">
+
+        <div class="select-fields-wrapper" fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="1rem">
+          <mat-form-field fxFlex="30">
+            <mat-select
+              placeholder="Select Size"
+              #selectedSize
+              name="size"
+              formControlName="size"
+              required
+            >
+              <mat-option *ngFor="let size of product.size" [value]="size">
+                {{ size }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field fxFlex="30">
+            <mat-select
+              placeholder="Select Color"
+              #selectedColor
+              name="color"
+              formControlName="color"
+              required
+            >
+              <mat-option *ngFor="let color of product.color" [value]="color">
+                {{ color }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field fxFlex="20">
+            <input type="number" matInput placeholder="Amount" value="1" required>
+          </mat-form-field>
+
+        </div>
+
+        <mat-divider></mat-divider>
+
+        <div fxLayout="row" fxLayoutAlign="space-around center">
+          <button
+            color="primary"
+            fxLayoutAlign="center center"
+            mat-raised-button
+            [routerLink]="['/products/' + product.id]"
+            [state]="product"
+            (click)="addToCart()"
+          >
+            Add to Cart
+          </button>
+
+          <button
+            color="primary"
+            fxLayoutAlign="center center"
+            mat-raised-button
+            [routerLink]="'/products'"
+          >
+            Continue shopping
+          </button>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</main>
