--- a/src/app/features/products/product/product.component.html
+++ b/src/app/features/products/product/product.component.html
@@ -25,7 +25,7 @@
       <form [formGroup]="productFormGroup" action="#" fxLayout="column">
 
         <div class="select-fields-wrapper" fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="1rem">
-          <mat-form-field fxFlex="30">
+          <mat-form-field fxFlex="30" *ngIf="product.color">
             <mat-select
               placeholder="Select Size"
               #selectedSize
@@ -39,7 +39,7 @@
             </mat-select>
           </mat-form-field>
 
-          <mat-form-field fxFlex="30">
+          <mat-form-field fxFlex="30" *ngIf="product.color">
             <mat-select
               placeholder="Select Color"
               #selectedColor
