--- a/src/app/features/cart/cart/cart.component.html
+++ b/src/app/features/cart/cart/cart.component.html
@@ -1,1 +1,71 @@
-<p>cart works!</p>
+<h1>Cart</h1>
+<main>
+  <div *ngIf="isData; else noData">
+    <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef>Price</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.price | currency }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="size">
+        <th mat-header-cell *matHeaderCellDef>Size</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.size }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="color">
+        <th mat-header-cell *matHeaderCellDef>Color</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.color }}
+        </td>
+      </ng-container>
+
+      <!-- TODO: Let the user change the amount -->
+      <ng-container matColumnDef="amount">
+        <th mat-header-cell *matHeaderCellDef>Amount</th>
+        <td mat-cell *matCellDef="let element">
+          <mat-form-field>
+            <input
+              type="number"
+              #amount
+              (change)="calculateTotalPrice($event, element)"
+              matInput
+              value="{{ element.amount | number }}"
+            />
+          </mat-form-field>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="totalPrice">
+        <th mat-header-cell *matHeaderCellDef>
+          Total Price
+        </th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.totalPrice | currency }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <mat-divider></mat-divider>
+    <!-- <div class="total-price">Total price: <span>1000$</span></div> -->
+    <div class="actions" fxLayout="row" fxLayoutAlign="space-around center">
+      <button color="primary" mat-raised-button (click)="buyNow()">Buy Now!</button>
+      <button color="primary" mat-raised-button [routerLink]="['/products']">
+        Continue shopping
+      </button>
+    </div>
+  </div>
+  <ng-template #noData>
+    Your card is empty
+  </ng-template>
+</main>
