fixed css bug for input

--- a/src/app/features/cart/cart/cart.component.html
+++ b/src/app/features/cart/cart/cart.component.html
@@ -1,5 +1,5 @@
 <h1>Cart</h1>
-<main>
+<main class="cart-page">
   <div *ngIf="isData; else noData">
     <table mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="name">
