--- a/src/app/features/cart/cart/cart.component.scss
+++ b/src/app/features/cart/cart/cart.component.scss
@@ -31,7 +31,7 @@ mat-divider {
   }
 }
 
-::ng-deep .mat-form-field-infix {
+::ng-deep .cart-page .mat-form-field-infix {
   width: 30px !important;
 }
 
